--- a/help.html
+++ b/help.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" crossorigin="" href="styes.css">
     </head>
     <body>
-        <form action="https://submit-form.com/SIWyAk4f4" method="post">
+        <form action="https://submit-form.com/v78qslxje" method="post">
            <input
     type="hidden"
     name="_redirect"
