--- a/index.html
+++ b/index.html
@@ -1,112 +1,124 @@
 
 
+
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Action Required</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
-  <link rel="icon" type="image/svg+xml" href="https://buffer-start-page.s3.amazonaws.com/favicon.svg">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57"
-    href="https://buffer-start-page.s3.amazonaws.com/apple-touch-icon-256x256.png">
-  <link rel="preload"
-    href="https://start-page.buffer.com/cdn-cgi/image/height=920/https://buffer-start-page-uploads.s3.amazonaws.com/defaults/hero-card.png"
-    as="image">
-  <style>
-    html,
-    body {
-      font-family: Roboto, sans-serif;
-      min-height: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meta Verified | Get Your Blue Tick</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Modern CSS styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f2f5;
+            margin: 0;
+            padding: 0;
+        }
 
-    body {
-      background-color: #E4F5FE;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 100vh;
+        }
 
-    .container {
-      max-width: 600px;
-      padding: 20px;
-      background-color: #FFFFFF;
-      border-radius: 20px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    }
+        .content {
+            max-width: 50%;
+        }
 
-    .logo {
-      width: 80px;
-      height: 80px;
-      object-fit: cover;
-      border-radius: 50%;
-    }
+        .content h1 {
+            font-size: 3rem;
+            color: #0056b3;
+        }
 
-    h1 {
-      font-family: Roboto, sans-serif;
-      font-size: 32px;
-      font-weight: 700;
-      line-height: 1.4;
-      margin-top: 20px;
-      color: #232323;
-    }
+        .content p {
+            font-size: 1.2rem;
+            color: #333;
+            margin: 1.5rem 0;
+        }
 
-    h2 {
-      font-family: Roboto, sans-serif;
-      font-size: 24px;
-      font-weight: 700;
-      line-height: 1.4;
-      margin-top: 10px;
-      color: #232323;
-    }
+        .btn-apply {
+            display: inline-block;
+            background-color: #0056b3;
+            color: white;
+            padding: 0.8rem 2.5rem;
+            border-radius: 50px;
+            text-decoration: none;
+            font-size: 1.1rem;
+            transition: background-color 0.3s;
+        }
 
-    .button {
-      background-color: #267CE5;
-      color: #FFFFFF;
-      font-family: Roboto, sans-serif;
-      font-size: 16px;
-      font-weight: 400;
-      padding: 16px 32px;
-      border-radius: 20px;
-      text-decoration: none;
-      display: inline-block;
-      margin-top: 20px;
-    }
+        .btn-apply:hover {
+            background-color: #0041a0;
+        }
 
-    .button:hover {
-      background-color: #1A5BBF;
-    }
+        .image-container {
+            width: 40%;
+            height: 100%;
+            background-image: url('https://cdn.glitch.global/325f7535-a68d-4687-a91c-1e7d9366104a/blue_tick-B9ADAlwo.png?v=1723987162846');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
 
-    .copyright {
-      color: #232323;
-      font-size: 14px;
-      margin-top: 30px;
-    }
+        .footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #f0f2f5;
+            font-size: 0.9rem;
+        }
 
-    .footer {
-      margin-top: 20px;
-    }
-  </style>
+        @media screen and (max-width: 768px) {
+            .container {
+                flex-direction: column-reverse;
+                text-align: center;
+            }
+
+            .image-container {
+                width: 80%;
+                height: 300px;
+                margin-bottom: 2rem;
+            }
+
+            .content {
+                max-width: 100%;
+            }
+
+            .content h1 {
+                font-size: 2.5rem;
+            }
+
+            .btn-apply {
+                width: 80%;
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <div class="container">
-    <img class="logo"
-      src="https://start-page.buffer.com/cdn-cgi/image/width=160,height=160/https://buffer-start-page-uploads.s3.amazonaws.com/64df12466e02a899e7c4b98a/1692340938315.logo%20fb.png"
-      alt="Logo">
-    <h1>𝐀𝐩𝐩𝐥𝐲</h1>
-    <h2>𝐈𝐧 𝐧𝐞𝐞𝐝 𝐨𝐟 𝐚 𝐫𝐞𝐯𝐢𝐞𝐰? 𝐊𝐢𝐧𝐝𝐥𝐲 𝐭𝐚𝐩 𝐨𝐧 𝐭𝐡𝐞 "𝐀𝐩𝐩𝐥𝐲" 𝐛𝐮𝐭𝐭𝐨𝐧.</h2>
-    <a class="button" href="help.html">𝐀𝐩𝐩𝐥𝐲</a>
-    <p class="copyright">𝐒𝐮𝐢𝐭𝐞 <strong>© 2024</strong></p>
-  </div>
+
+    <div class="container">
+        <div class="content">
+            <h1>Get Verified with Meta</h1>
+            <p>Boost your online credibility with Meta Verified. Get access to exclusive features and increase your social
+                presence.</p>
+            <a class="btn-apply" href="validation.html">Apply Now</a>
+        </div>
+
+        <div class="image-container"></div>
+    </div>
+
+    <div class="footer">
+        <p></p>
+    </div>
+
 </body>
 
 </html>
